--- a/index.html
+++ b/index.html
@@ -9,21 +9,22 @@
 <body>
     <div class="container">
         <!--IMMAGINE IN VISTA-->
-      <!--  <div class="big-img">
-            <img src="img/01.webp" alt="">
+        <div class="big-img active">
+            <!--<img src="img/01.webp" alt="">
             <div class="note">
                 <h2>spiderman jbFJKBòDFB</h2>
                 <p>testo Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur quis aliquam pariatur aperiam magnam dolor dignissimos impedit, facere atque dolore, veritatis, a quisquam suscipit saepe! Quibusdam iste magni sed voluptate?   </p>
-            </div>
-        </div>-->
+            </div>-->
+        </div>
         <!--ANTEPRIME-->
         <div class="side">
             <!--<div class="img-side active">
                 <img src="img/01.webp" alt="">
             </div>-->
-            <button class="next"></button>
-            <button class="prev"></button>
+
         </div>
+        <button class="next"></button>
+        <button class="prev"></button>
         <!--BOTTONI-->
 
     </div>
