add: js event listener

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <!--IMMAGINE IN VISTA-->
-        <div class="big-img active">
+        <div class="big-img">
             <!--<img src="img/01.webp" alt="">
             <div class="note">
                 <h2>spiderman jbFJKBòDFB</h2>
