add: button and autoplay js

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/style.css">
     <title>Carosello Array di Oggetti</title>
 </head>
@@ -18,15 +19,18 @@
         </div>
         <!--ANTEPRIME-->
         <div class="side">
-            <!--<div class="img-side active">
+            <!--<div class="img-side">
                 <img src="img/01.webp" alt="">
             </div>-->
-
         </div>
+                <!--BOTTONI-->
         <button class="next"></button>
         <button class="prev"></button>
-        <!--BOTTONI-->
-
+    </div>
+    <div class="control">
+        <button class="start-auto"><i class="fa-solid fa-arrow-rotate-right"></i></buttton>
+        <button class="stop-auto"><i class="fa-solid fa-arrows-to-eye"></i></buttton>
+        <button class="rev-auto"><i class="fa-solid fa-arrow-rotate-left"></i></button>
     </div>
     <!--JS script-->
     <script src="JS/script.js"></script>
